etc/kubernetes/manifests/santander-phpinfo-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: santander-phpinfo-dc
spec:
  replicas: 2
  selector:
    app: santander-phpinfo-dc
  template:
    metadata:
      labels:
        app: santander-phpinfo-dc
    spec:
      containers:
        - 
          args:
            - -f
            - index.php
            - -S
            - 0.0.0.0:8080
          command:
            - php
          image: 'index.docker.io/ssanchezmingo/santander-phpinfo:latest'
          name: santander-phpinfo-dc-container
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 20m
              memory: 20M
            requests:
              cpu: 20m
              memory: 20M
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
status: {}
