etc/kubernetes/manifests/santander-phpinfo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: santander-phpinfo-svc
spec:
  ports:
    -
      port: 80
      protocol: TCP
      targetPort: 8080
  selector: 
    app: santander-phpinfo-dc
