etc/kubernetes/manifests/santander-phpinfo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: santander-phpinfo-route
spec:
  host: santos-phpinfo.sebastian-colomar.es
  port:
    targetPort: 8080
  to:
    kind: Service
    name: santander-phpinfo-svc
